# pico-projects

./: .gitignore  README.md  upload_pico.sh
My_Projects/01_Pico_Blink/: CMakeLists.txt  blink.c
My_Projects/02_Pico_UART/: CMakeLists.txt  README.md  uart_comm.c
My_Projects/02_Pico_UART_comm/: CMakeLists.txt  uart_comm.c
My_Projects/03_Pico_NumSwap/: CMakeLists.txt  numswap.c
My_Projects/10.DuplicateRemovalSortedArray/: CMakeLists.txt
My_Projects/10.DuplicateRemovalSortedArray/user_implementations/: DuplicateRemovalSortedArray.c
My_Projects/10.DuplicateRemovalSortedArray/user_implementations/testing/: CMakeLists.txt  test_logic_lse.c
My_Projects/10.DuplicateRemovalSortedArray/user_implementations/testing/mock/: uart_comm.h
My_Projects/6.SetBitsInInteger/inc/: user_input.h
My_Projects/6.SetBitsInInteger/user_implementations/: ReadMe.txt  SetBitsInInteger.c
My_Projects/7.GCD2NumEuclid/: CMakeLists.txt
My_Projects/7.GCD2NumEuclid/user_implementations/: GCD2NumEuclid.c  ReadMe.txt
My_Projects/8.Decimal2Binary/: CMakeLists.txt  README.md
My_Projects/8.Decimal2Binary/src/: uart_comm.c
My_Projects/8.Decimal2Binary/user_implementations/: Decimal2Binary.c  ReadMe.txt
My_Projects/8.Decimal2Binary/user_implementations/testing/: CMakeLists.txt  test_logic.c
My_Projects/8.Decimal2Binary/user_implementations/testing/mock/: logger.h
My_Projects/9.LargestSmallestArrayElement/: CMakeLists.txt
My_Projects/9.LargestSmallestArrayElement/inc/: uart_comm.h
My_Projects/9.LargestSmallestArrayElement/src/: logger.c
My_Projects/9.LargestSmallestArrayElement/user_implementations/: LargestSmallestArrayElement.c  ReadMe.txt
My_Projects/9.LargestSmallestArrayElement/user_implementations/testing/: test_logic_lse.c
My_Projects/9.LargestSmallestArrayElement/user_implementations/testing/mock/: user_input.h
My_Projects/FactorialCheck/: CMakeLists.txt
My_Projects/FactorialCheck/src/: user_input.c
My_Projects/FactorialCheck/user_implementations/: FactorialCheck.c
My_Projects/Pico_04_UART_RX_TX/: CMakeLists.txt  Pico_04_UART_RX_TX.c  Pico_04_UART_RX_TX_Compare.c  Pico_04_UART_RX_TX_Scanf.c  single_character_input.txt  string_input.txt
My_Projects/Pico_05_Generalized_Code/: CMakeLists.txt  Pico_05_Generalized_Code.c
My_Projects/Pico_06_Swap2Num_xThirdVar/: CMakeLists.txt  Pico_05_Generalized_Code.c  Pico_06_Swap2Num_xThirdVar.c
My_Projects/Pico_07_Modular_File_structure/: CMakeLists.txt  ReadMe.txt
My_Projects/Pico_07_Modular_File_structure/user_implementations/: my_functions.c
My_Projects/PrimeNumberCheck/: CMakeLists.txt
My_Projects/PrimeNumberCheck/user_implementations/: PrimeNumberCheck.c
My_Projects/StringPalindrome/: CMakeLists.txt
My_Projects/StringPalindrome/user_implementations/: StringPalindrome.c
My_Projects/StringReverse/: CMakeLists.txt
My_Projects/StringReverse/inc/: logger.h
My_Projects/StringReverse/src/: main.c
My_Projects/StringReverse/user_implementations/: StringReverse.c
openocd_configs/: pico_debug.cfg
